change path of load chat
